new lab08 files

--- a/lab/lab08/lab08.ipynb
+++ b/lab/lab08/lab08.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3be96ef",
+   "id": "bc7fd60b",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf6f45fe",
+   "id": "7912bc9b",
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edd8ce37",
+   "id": "df67886d",
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae780962",
+   "id": "10926e5b",
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b86f4886",
+   "id": "7602d0e0",
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fa02741",
+   "id": "0e851e78",
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02ad7db8",
+   "id": "d1044d10",
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ac538c8",
+   "id": "eff50080",
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "187faf83",
+   "id": "30304692",
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -510,8 +510,8 @@
    "source": [
     "# Print the fitted_estimators\n",
     "gammas = gammas_model.params\n",
-    "print(\"The estimated causal effect on number of books read of an additional Readathon day is {:.2f}\".format(gammas[0]))\n",
-    "print(\"The estimated causal effect on number of books read of an additional $10000 is {:.2f}\".format(gammas[1]))\n",
+    "print(\"The estimated causal effect on number of books read of an additional Readathon day is {:.2f}\".format(gammas.iloc[0]))\n",
+    "print(\"The estimated causal effect on number of books read of an additional $10000 is {:.2f}\".format(gammas.iloc[1]))\n",
     "# The numbers you get should be very close to you answer in 1.b"
    ]
   },
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cacdaf58",
+   "id": "5a6d81c5",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56a9ef6b",
+   "id": "bf004122",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -644,7 +644,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"The Naive OLS estimate of beta_1 is {:.2f}, while the true beta_1 is {}\".format(beta_naive_model.params[1], 5))"
+    "print(\"The Naive OLS estimate of beta_1 is {:.2f}, while the true beta_1 is {}\".format(beta_naive_model.params.iloc[1], 5))"
    ]
   },
   {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86d4b6b6",
+   "id": "6e5a0d79",
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31aa467e",
+   "id": "11ed25f4",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -754,7 +754,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"The OLS estimate of gamma_1 is {:.3f}, while the true gamma_1 is {}\".format(gamma1_model.params[1], 1))"
+    "print(\"The OLS estimate of gamma_1 is {:.3f}, while the true gamma_1 is {}\".format(gamma1_model.params.iloc[1], 1))"
    ]
   },
   {
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e41443e",
+   "id": "4dc4ff38",
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -827,8 +827,8 @@
    "outputs": [],
    "source": [
     "# Compute predictions for number of books read\n",
-    "intercept_OLS = gamma1_model.params[0]\n",
-    "gamma1_OLS = gamma1_model.params[1]\n",
+    "intercept_OLS = gamma1_model.params.iloc[0]\n",
+    "gamma1_OLS = gamma1_model.params.iloc[1]\n",
     "Z_hat = intercept_OLS + gamma1_OLS*student_data['ReadathonDuration']\n",
     "\n",
     "# Add the predictions to the student_data dataframe\n",
@@ -868,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6af80ec",
+   "id": "a524f406",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -885,7 +885,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"The 2SLS estimate of beta_1 is {:.3f}, while the true value is {}\".format(beta1_model.params[1], 5))"
+    "print(\"The 2SLS estimate of beta_1 is {:.3f}, while the true value is {}\".format(beta1_model.params.iloc[1], 5))"
    ]
   },
   {
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efb5f689",
+   "id": "7aa7897b",
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36a2953b",
+   "id": "93042748",
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05a92ba6",
+   "id": "1dd4e3a9",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1016,7 +1016,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64ad8f32",
+   "id": "7f2d8680",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0570de35",
+   "id": "be390ca8",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbc9e114",
+   "id": "38de0633",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92107252",
+   "id": "4cb6ff02",
    "metadata": {},
    "source": [
     " "
@@ -1108,7 +1108,7 @@
       {
        "cases": [
         {
-         "code": ">>> params = beta_naive_model.params\n>>> checks = [len(params) == 2, np.abs(params[0] - 42.85) < 0.5, np.abs(params[1] - 12.96) < 0.2]\n>>> assert np.all(checks)\n/tmp/ipykernel_2025/3480811477.py:3: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n  np.abs(params[0] - 42.85)<0.5,\n/tmp/ipykernel_2025/3480811477.py:4: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n  np.abs(params[1] - 12.96)<0.2]\n",
+         "code": ">>> params = beta_naive_model.params\n>>> checks = [len(params) == 2, np.abs(params.iloc[0] - 42.85) < 0.5, np.abs(params.iloc[1] - 12.96) < 0.2]\n>>> assert np.all(checks)\n",
          "hidden": false,
          "locked": false
         }
@@ -1127,7 +1127,7 @@
       {
        "cases": [
         {
-         "code": ">>> params = gamma1_model.params\n>>> checks = [len(params) == 2, np.abs(params[0] - 50.16) < 0.5, np.abs(params[1] - 1) < 0.1]\n>>> assert np.all(checks)\n/tmp/ipykernel_2025/2668380842.py:3: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n  np.abs(params[0] - 50.16)<0.5,\n/tmp/ipykernel_2025/2668380842.py:4: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n  np.abs(params[1] - 1)<0.1]\n",
+         "code": ">>> params = gamma1_model.params\n>>> checks = [len(params) == 2, np.abs(params.iloc[0] - 50.16) < 0.5, np.abs(params.iloc[1] - 1) < 0.1]\n>>> assert np.all(checks)\n",
          "hidden": false,
          "locked": false
         }
@@ -1146,7 +1146,7 @@
       {
        "cases": [
         {
-         "code": ">>> params = beta1_model.params\n>>> checks = [len(params) == 2, np.abs(params[0] - 612) < 5, np.abs(params[1] - 4.84) < 0.3]\n>>> assert np.all(checks)\n/tmp/ipykernel_2025/1977436641.py:3: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n  np.abs(params[0] - 612)<5,\n/tmp/ipykernel_2025/1977436641.py:4: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n  np.abs(params[1] - 4.84)<0.3]\n",
+         "code": ">>> params = beta1_model.params\n>>> checks = [len(params) == 2, np.abs(params.iloc[0] - 612) < 5, np.abs(params.iloc[1] - 4.84) < 0.3]\n>>> assert np.all(checks)\n",
          "hidden": false,
          "locked": false
         }
